[package]
name = "vmlb"
version = "0.1.0"
edition = "2021"
authors = ["Sherlock Holo <sherlockya at gmail.com>"]
license = "MIT"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "agent",
]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time"] }

async-trait = "0.1"
futures-util = "0.3"
tower-service = "0.3"

tonic = "0.8"
prost = "0.11"
http = "0.2"
http-body = "0.4"
bytes = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1"
tap = "1"

kube = { version = "0.74", features = ["runtime"] }
k8s-openapi = { version = "0.15", features = ["v1_24"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockall = "0.11"
tower-test = "0.4"
tower = "0.4"
hyper = "0.14"

[build-dependencies]
tonic-build = "0.8"
