[package]
name = "agent"
version = "0.1.0"
edition = "2021"
authors = ["Sherlock Holo <sherlockya at gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time"] }
tokio-stream = { version = "0.1", features = ["fs"] }
bytes = "1"

futures-util = "0.3"

rand = "0.8"
dashmap = "5"

async-trait = "0.1"

tonic = "0.8"
prost = "0.11"

thiserror = "1"
tap = "1"

tracing = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rtnetlink = "0.11"

clap = { version = "3", features = ["derive"] }

[dev-dependencies]
mockall = "0.11"
tempfile = "3"

[build-dependencies]
tonic-build = "0.8"
